--- a/.gitconfig
+++ b/.gitconfig
@@ -18,9 +18,9 @@
 	st = status -sb
 	branches = branch -av
 	remotes = remote -v
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit
-	la = log --color --graph --pretty=format:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --all
-	ls = log --color --graph --pretty=format:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --decorate --numstat
+	lg = log --color --graph --pretty=tformat:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit
+	la = log --color --graph --pretty=tformat:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --all
+	ls = log --color --graph --pretty=tformat:'%Cred%h%Creset -%C(magenta)%d %Cgreen(%aI)%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --decorate --numstat
 	lf = log -p
 	fe = fetch
 	ch = cherry -v
@@ -61,9 +61,9 @@
 	its = !git branch -f ${1} HEAD && git switch ${1}
 	sh = "!bash -c 'git diff-tree --color=always -p \"$1^1\" \"$1\" | less' ''"
 	ff = "!bash -c 'git merge-base --is-ancestor \"$1\" \"$2\" && git branch -f \"$1\" \"$2\" && echo \"$(git rev-parse \"$1@{1}\")\" \"->\" \"$(git rev-parse $2)\" || (echo FAIL && false)' ''"
-	greps = "!bash -c 'git --no-pager grep \"$@\" -- :/; git submodule foreach --recursive \"$(printf \"%s || true\" \"$(printf \"%q \" git --no-pager greps \"$@\")\" )\"' ''"
-	find = "!bash -c 'git ls-files -- :/ | grep \"$1\"' ''"
-	finds = "!bash -c 'git ls-files -- :/ | grep \"$1\"; git submodule foreach --recursive \"git ls-files\" | grep -e \"1\" -e Entering' ''"
+	greps = "!bash -c '(git --no-pager grep --color=always \"$@\" -- :/; git submodule foreach --recursive \"$(printf \"%s || true\" \"$(printf \"%q \" git --no-pager greps --color=always \"$@\")\" )\") | less' ''"
+	find = "!git ls-files -- :/ | grep --color=always"
+	finds = "!(git ls-files; git submodule foreach --recursive \"git ls-files\") | awk -F '/' \"{ if (match(\\$0, /^Entering '(.*)'\\$/, ary)) { P=ary[1]; sep=\\\"/\\\" } else { printf \\\"%s%s%s\\\\n\\\",P,sep,\\$0; } }\" | grep --color=always"
 	onto = "!bash -c 'git update-ref ONTO_TMP HEAD && git rebase -i $1 $2 --onto ONTO_TMP && git branch -f $1 ONTO_TMP && git switch $1' ''"
 	ignore = !vim `git rev-parse --git-dir`/info/exclude
 [credential]
