--- a/.gitconfig
+++ b/.gitconfig
@@ -48,7 +48,7 @@
 	fuck = !git add -A && git commit --amend -C HEAD && git push --force-with-lease
 	st = status -sb
 	s = diff-files --name-status
-	t = diff-index --name-status HEAD
+	t = diff-index --name-status --cached HEAD
 	sb = show-branch
 	sba = show-branch -a
 	ass = update-index --assume-unchanged --
