--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,7 @@
 	pt = push --tags
 	pnf = push --force-with-lease
 	cp = cherry-pick
+	cpnc = cherry-pick --no-commit
 	mf = merge --ff-only
 	mnf = merge --no-ff
 	mnfnc = merge --no-ff --no-commit
