--- a/.gitconfig
+++ b/.gitconfig
@@ -32,9 +32,16 @@
 	fpa = fetch --prune --all
 	clones = clone --depth 1 --no-tags
 	br = branch
+	a = add
+	ap = add -p
 	cm = commit
+	cma = commit --amend
 	cmna = commit --amend -C HEAD
+	ca = commit -a
+	cama = commit -a --amend
+	camna = commit -a --amend -C HEAD
 	ac = !git add -A && git commit
+	acma = !git add -A && git commit --amend
 	acmna = !git add -A && git commit --amend -C HEAD
 	pu = push
 	pt = push --tags
@@ -59,7 +66,9 @@
 	unskip = update-index --no-skip-worktree --
 	r = restore --source
 	rs = restore --source HEAD --staged
+	rsp = restore --source HEAD --staged -p
 	rw = restore --worktree
+	rwp = restore --worktree -p
 	rsw = restore --source HEAD --staged --worktree
 	sw = switch
 	de = switch --detach
