--- a/.gitconfig
+++ b/.gitconfig
@@ -68,8 +68,8 @@
 	rw = restore --worktree
 	rwp = restore --worktree -p
 	rsw = restore --source HEAD --staged --worktree
-	re = rebase
-	rb = rebase -i
+	re = rebase --reapply-cherry-picks
+	rb = rebase --reapply-cherry-picks -i
 	rbq = rebase --abort
 	rbc = rebase --continue
 	sw = switch
