--- a/.gitconfig
+++ b/.gitconfig
@@ -54,8 +54,8 @@
 	mnfssx = !git merge --no-ff -s subtree -X subtree=${1}
 	fuck = !git add -A && git commit --amend -C HEAD && git push --force-with-lease
 	st = status -sb
-	s = status -sb --no-renames --ignore-submodules=all --untracked-files=no
-	t = status -sb --no-renames --ignore-submodules=all
+	s = status -sb --no-renames --ignore-submodules=dirty --untracked-files=no
+	t = status -sb --no-renames --ignore-submodules=dirty
 	sb = show-branch
 	sba = show-branch -a
 	ass = update-index --assume-unchanged --
