improve git cfg

--- a/.gitconfig
+++ b/.gitconfig
@@ -83,7 +83,7 @@
 	finds = "!(git ls-files; git submodule foreach --recursive \"git ls-files\") | awk -F '/' \"{ if (match(\\$0, /^Entering '(.*)'\\$/, ary)) { P=ary[1]; sep=\\\"/\\\" } else { printf \\\"%s%s%s\\\\n\\\",P,sep,\\$0; } }\" | grep --color=always"
 	onto = "!bash -c 'git update-ref ONTO_TMP HEAD && git rebase -i $1 $2 --onto ONTO_TMP && git branch -f $1 ONTO_TMP && git switch $1' ''"
 	ignore = !vim `git rev-parse --git-dir`/info/exclude
-	cfg = !vim `git rev-parse --git-dir`/config
+	cfg = "!vim \"$(unset GIT_DIR && git -C \"$(git worktree list | awk '{ print $1; exit; }')\" rev-parse --absolute-git-dir)/config\""
 	sub = submodule
 	sync = submodule sync
 	with-ng = "!\"$SHELL\" -c 'echo -e \"\\e[100m\\e[1m\\e[91m!!!!!INSECURE!!!!!\\e[0m\"; A=\"$(mktemp -d)\"; git worktree add \"$A\" \"$@\" && git worktree list && (unset GIT_DIR; cd \"$A\"; printf \"$ cd \"; pwd; git status; \"$SHELL\"); git worktree remove -f \"$A\"; git worktree list; printf \"$ cd \"; pwd' ''"
